--- a/src/screen/Hi/style.scss
+++ b/src/screen/Hi/style.scss
@@ -141,3 +141,11 @@ and (max-device-height: 556px){
         display: none;
     }
 }
+
+@media only screen 
+and (min-device-width: 320px) 
+and (max-device-width: 556px){
+    .button-scroll{
+        display: none;
+    }
+}
