--- a/src/screen/projects/cardProject/style.scss
+++ b/src/screen/projects/cardProject/style.scss
@@ -22,6 +22,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+        pointer-events: none;
         align-items: center;
         width: 100%;
         height: 100%;
@@ -86,6 +87,7 @@
     }
     .hover{
         opacity: 1;
+        pointer-events: all;
     }
 }
 
