--- a/src/App/style.scss
+++ b/src/App/style.scss
@@ -1,30 +1,64 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
+@import '../vars.scss';
+
 *{
     margin: 0;
     padding: 0;
+    font-family: "Raleway";
 }
 
-@font-face{
-    font-family: "Roboto";
-    src: "../assets/font/Roboto-Regular.ttf"
+h1{
+    font-size: $font-size-l;
 }
 
-.hide{
-    display: none;
+h1 p {
+    color: $color-font;
 }
 
-::-webkit-scrollbar {
-    width: 0.6em;
+h2{
+    color: $color-subtitle;
+    font-size: $font-size-ml;
 }
 
-::-webkit-scrollbar-track {
-    background: #eeeeee;
+body {
+    min-width: 100vw;
+    min-height: 100vh;
+    background: linear-gradient( $color-primary, $color-secondary);
 }
 
-::-webkit-scrollbar-thumb {
-    background: #888;
-    border-radius: 0.6em;
+svg{
+    width: $icon-size;
+    height: $icon-size;
+    fill: $color-font;
 }
 
-::-webkit-scrollbar-thumb:hover {
-    background: #d72323;
+a:hover{
+    opacity: .8;
+}
+
+
+#app {
+    margin: auto;
+    padding: $space-1 0;
+    width: 80%;
+    min-height: calc( 100vh - $space-1 - $space-1 );
+}
+
+.flex-column{
+    flex-direction: column;
+}
+
+button{
+    border: none;
+    color: $color-wrap;
+    background-color: $color-primary;
+    padding: .6em  0;
+    font-weight: 800;
+    font-size: $font-size-m;
+    width: 15em;
+    cursor: pointer;
+}
+
+button:hover {
+    opacity: 0.8;
 }
