--- a/src/App/style.scss
+++ b/src/App/style.scss
@@ -62,3 +62,12 @@ button{
 button:hover {
     opacity: 0.8;
 }
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 556px), 
+screen and (min-device-height: 320px) and (max-device-height: 556px) {
+    #app{
+        width: 100%;
+        padding: 0;
+        padding-top: $space-3;
+    }
+}
