--- a/src/Components/Content/style.scss
+++ b/src/Components/Content/style.scss
@@ -1,10 +1,12 @@
 @import '../../vars.scss';
 
 #content{
+    padding: 0;
     position: relative;
     padding: $space-2;
     background-color: white;
     display: flex;
+    overflow: hidden;
 }
 
 
@@ -12,6 +14,5 @@
 screen and (max-device-height: 556px) and (min-device-height: 320px){
     #content{
         padding: 0;
-        min-height: calc( 100vh - 5.25em );
     }
 }
