--- a/src/App/style.scss
+++ b/src/App/style.scss
@@ -76,23 +76,30 @@ button:hover {
 }
 
 .transition-page-appear{
-    #nav .link {
-        svg{
-            opacity: 0;
+    #nav {
+        .link {
+            svg{
+                opacity: 0;
+            }
+            .triangulo.active{
+                border-bottom: 0em solid white;
+            }
         }
-        .triangulo.active{
-            border-bottom: 0em solid white;
         }
-    }
-    #content{
-        padding: 0 $space-2;
-        max-height: 0;
-    }
+        #content{
+            padding: 0 $space-2;
+            max-height: 0;
+
+            .cover{
+                height: 0;
+            }
+        }
 
 }
 
 .transition-page-appear-active{
-    #nav .link {
+    #nav {
+        .link {
         svg{
             opacity: 1;
             transition: opacity 300ms linear;
@@ -102,10 +109,15 @@ button:hover {
             transition: border-bottom 300ms linear;
         }
     }
+    }
     #content{
         padding: $space-2;
         max-height: 100vh;
-        transition: padding 1000ms linear, max-height 1000ms linear;
+        transition: padding 600ms linear, max-height 600ms linear;
+        .cover{
+            height: 100%;
+            transition: height 1ms linear 601ms;
+        }
     }
 }
 
@@ -160,6 +172,9 @@ button:hover {
     #content{
         padding: 0 $space-2;
         max-height: 0;
+        .cover{
+            height: 0;
+        }
     }
 }
 
@@ -181,7 +196,11 @@ button:hover {
     #content{
         padding: $space-2;
         max-height: 100vh;
-        transition: padding 1000ms linear 350ms, max-height 1000ms linear 350ms;
+        transition: padding 600ms linear 350ms, max-height 600ms linear 350ms;
+        .cover{
+            height: 100%;
+            transition: height 1ms linear 960ms;
+        }
     }
 }
 
