--- a/src/screens/contact/style.scss
+++ b/src/screens/contact/style.scss
@@ -12,6 +12,10 @@
         width: auto;
         grid-column: 1 / 2;
         grid-row: 5 / 6;
+
+        svg{
+            margin-left: $space-5;
+        }
     }
 
     #input-name{
@@ -37,11 +41,11 @@
 @media only screen and (min-device-width: 320px) and (max-device-width: 556px), 
 screen and (min-device-height: 320px) and (max-device-height: 556px) {
     #header-contact{
-        padding: 1em 1em 0 1em;
+        padding: $space-3 $space-3 0 $space-3;
     } 
 
     #contact-form{
-        padding: 1em;
+        padding: $space-3;
         #input-name{
             grid-column: 1 / 3;
             grid-row: 1 / 2;
