cambiada la pagina de not found y scroll para la vista page en la laptop

--- a/src/Components/work-card/style.scss
+++ b/src/Components/work-card/style.scss
@@ -16,12 +16,16 @@
         .laptop{
             width: 100%;
         }
-        .img--content{
+        .img--wrap{
             position: absolute;
             width: 67.7%;
-            height: 81.3%;
+            height: 81.2%;
             top: 7.1%;
             left: 17.5%;
+            overflow: hidden;
+        }
+        .img--content{
+            width: 100%;
         }
     }
 
