--- a/src/App/style.scss
+++ b/src/App/style.scss
@@ -209,7 +209,8 @@ button:hover {
 
 
 ::-webkit-scrollbar {
-    width: 5px;
+    width: 0.2em;
+    height: 0px;
   }
   
   ::-webkit-scrollbar-track {
