primer service worker etiquetas metas personalizadas en todas las paginas y completa integración con cloudinary

--- a/src/App/style.scss
+++ b/src/App/style.scss
@@ -27,8 +27,8 @@ body {
 }
 
 input, textarea {
-    background: #F4F4F4;
-    color: #777777;
+    background: #f6f6f6;
+    color: #232323;
     font-size: $font-size-m;
     padding:  $space-5;
     border: none
