--- a/src/screens/contact/style.scss
+++ b/src/screens/contact/style.scss
@@ -4,7 +4,7 @@
     margin-top: $space-3;
     display: grid;
     grid-gap: $space-5;
-    height: 25em;
+    height: 22em;
     grid-template-columns: repeat(2,1fr);
     grid-template-rows: repeat(3,1fr) 2fr 1fr;
 
@@ -37,7 +37,31 @@
     }
 }
 
+@media screen and (max-width: 1000px){
+    #contact-form{
+    #input-name{
+        grid-column: 1 / 3;
+        grid-row: 1 / 2;
+    }
+    #input-subject{
+        grid-column: 1 / 3;
+        grid-row: 2 / 3;
+    }
+    #input-email{
+        grid-column: 1 / 3;
+        grid-row: 3 / 4;
+    }
+    #textarea-message{
+        grid-column: 1 / 3;
+        grid-row: 4 / 5;
+    }
+    button{
+        grid-column: 1 / 3;
+        grid-row: 5 / 6;
+    }
+    }
 
+}
 @media only screen and (min-device-width: 320px) and (max-device-width: 556px), 
 screen and (min-device-height: 320px) and (max-device-height: 556px) {
     #header-contact{
