--- a/src/screens/home/style.scss
+++ b/src/screens/home/style.scss
@@ -5,32 +5,7 @@
         top: 0;
         height: 100%;
         width: 20em;
-
-        .arrow{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            right: 0;
-            top: calc( 50% - 1.75em);
-            position: absolute;
-            background: #ffffff;
-            height: $icon-size;
-            width: $icon-size;
-            transition: width 300ms linear;
-            svg{
-                cursor: pointer;
-                width: $font-size-m;
-                height: $icon-size;
-               
-            }
-        }
-
-        .arrow:hover{
-            width: 3em;
-        }
-
-
-
+        
         img{
             width: 100%;
             height: 100%;
@@ -66,14 +41,10 @@
         }
     }
 
-@media screen and (max-width: 1000px) and (min-width: 556px){
+@media screen and (max-width: 1000px){
     .cover{
         margin: auto;
         position: inherit;
-
-        .arrow{
-            display: none;
-        }
     }
     #home{
         h1{
