--- a/src/App/style.scss
+++ b/src/App/style.scss
@@ -38,6 +38,22 @@ textarea {
     resize: none;
 }
 
+div.team{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: 3px solid $color-primary;
+    font-size: $font-size-m;
+    padding: 5px 10px;
+    align-self: center;
+
+    svg{
+        width: 2em;
+        height: 2em;    
+        margin-right: $space-5;
+    }
+}
+
 div.warn{
     display: flex;
     align-items: center;
