nuevo cv ingles español cambio de color

--- a/src/vars.scss
+++ b/src/vars.scss
@@ -2,8 +2,8 @@
 
 //colors
 
-$color-primary:         #13547A;
-$color-secondary:       #80D0C7;
+$color-primary:         #008062;
+$color-secondary:       #009975;
 $color-font:            #303841;
 $color-subtitle:        #707070;
 $color-wrap:            #ffffff;
