--- a/src/screens/home/style.scss
+++ b/src/screens/home/style.scss
@@ -18,6 +18,7 @@
 
     #home{
         overflow: hidden;
+        justify-content: center;
         h1{
             margin-top: $space-4;
         }
@@ -26,10 +27,13 @@
             padding-left: $space-3;
             margin-bottom: $space-4;
         }
-
-        button{
-            font-size: $font-size-m;
-            margin-left: calc( (100% - 20em - 7.5em - 3em ) * .5 );
+        .cv__wrapper{
+            display: flex;
+            justify-content: center;
+            padding-right: calc( (100% - 20em - 7.5em - 3em ) * .5 );
+            button{
+                font-size: $font-size-m;
+            }
         }
         #content{
             height: 16em;
